--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hii</title>
+    <title>2019</title>
     <script src="https://cdn.jsdelivr.net/npm/vega@5.20.2"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.1.0"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.17.0"></script>
@@ -58,25 +58,25 @@
         <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
     </section>
     <section class="choropleth">
-        <h2><span class="purple">World Population</span></h2>
+        <h2><span class="purple">Correlation between <span class="brown">Happiness Score</span> and <span class="red">GDP</span></span></h2>
         <div id="GDPscatterplot2019"></div>
     </section>
     <section class="content">
-        <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
+        <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="red">GDP</span>, it clearly shows that higher <span class="red">GDP</span> brings higher <span class="brown">Happiness Score</span>.</p>
     </section>
     <section class="choropleth">
-        <h2><span class="purple">World Population</span></h2>
+        <h2><span class="purple">Correlation between <span class="brown">Happiness Score</span> and <span class="yellow">Healthy life expectancy</span></span></h2>
         <div id="Healthyscatterplot2019"></div>
     </section>
     <section class="content">
-        <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
+        <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="yellow">Healthy life expectancy</span>, it clearly shows that higher <span class="yellow">Healthy life expectancy</span> brings higher <span class="brown">Happiness Score</span>.</p>
     </section>
     <section class="choropleth">
-        <h2><span class="purple">World Population</span></h2>
+        <h2><span class="purple">Correlation between <span class="brown">Happiness Score</span> and <span class="purple">Freedom to make life choices</span></h2>
         <div id="Freedomscatterplot2019"></div>
     </section>
     <section class="content">
-        <p>The bar chart above displays the <span class="purple">Freedom to make life choice</span> for each <span class="blue">country</span>. <span class="purple">"Freedom to make life choices"</span> signifies the liberty for individuals to decide and pursue their personal, professional, and social preferences without significant external restrictions, contributing to personal autonomy and well-being. We categorize <span class="blue">countries</span> based on their <span class="brown">Happiness Scores</span>, and you can filter the display to show <span class="blue">countries</span> within a specific <span class="brown">Happiness Scores</span> range by selecting that range.</p></p>
+        <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="purple">Freedom to make life choices</span>, it clearly shows that higher <span class="purple">Freedom to make life choices</span> brings higher <span class="brown">Happiness Score</span>.</p>
     </section>
     </main>
     
