--- a/DataVisualisation2/2017.html
+++ b/DataVisualisation2/2017.html
@@ -79,6 +79,9 @@ var vg1 = "js/choroplethmap2017.vg.json";
 var vg2 = "js/GDPbarchart2017.vg.json";
 var vg3 = "js/Healthybarchart2017.vg.json";
 var vg4 = "js/Freedombarchart2017.vg.json";
+var vg5 = "js/GDPscatterplot2017.vg.json";
+var vg6 = "js/Healthyscatterplot2017.vg.json";
+var vg7 = "js/Freedomscatterplot2017.vg.json";
 vegaEmbed("#choropleth_map2017",vg1).then(function (result){
 }).catch(console.error);
 vegaEmbed("#GDPbarchart2017",vg2).then(function (result){
@@ -86,6 +89,12 @@ vegaEmbed("#GDPbarchart2017",vg2).then(function (result){
 vegaEmbed("#Healthybarchart2017",vg3).then(function (result){
 }).catch(console.error);
 vegaEmbed("#Freedombarchart2017",vg4).then(function (result){
+}).catch(console.error);
+vegaEmbed("#GDPscatterplot2017",vg5).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Healthyscatterplot2017",vg6).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Freedomscatterplot2017",vg7).then(function (result){
 }).catch(console.error);
 </script>
 
