--- a/DataVisualisation2/2016.html
+++ b/DataVisualisation2/2016.html
@@ -79,6 +79,9 @@ var vg1 = "js/choroplethmap2016.vg.json";
 var vg2 = "js/GDPbarchart2016.vg.json";
 var vg3 = "js/Healthybarchart2016.vg.json";
 var vg4 = "js/Freedombarchart2016.vg.json";
+var vg5 = "js/GDPscatterplot2016.vg.json";
+var vg6 = "js/Healthyscatterplot2016.vg.json";
+var vg7 = "js/Freedomscatterplot2016.vg.json";
 vegaEmbed("#choropleth_map2016",vg1).then(function (result){
 }).catch(console.error);
 vegaEmbed("#GDPbarchart2016",vg2).then(function (result){
@@ -86,6 +89,12 @@ vegaEmbed("#GDPbarchart2016",vg2).then(function (result){
 vegaEmbed("#Healthybarchart2016",vg3).then(function (result){
 }).catch(console.error);
 vegaEmbed("#Freedombarchart2016",vg4).then(function (result){
+}).catch(console.error);
+vegaEmbed("#GDPscatterplot2016",vg5).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Healthyscatterplot2016",vg6).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Freedomscatterplot2016",vg7).then(function (result){
 }).catch(console.error);
 </script>
 
