--- a/DataVisualisation2/2015.html
+++ b/DataVisualisation2/2015.html
@@ -79,6 +79,9 @@ var vg1 = "js/choroplethmap2015.vg.json";
 var vg2 = "js/GDPbarchart2015.vg.json";
 var vg3 = "js/Healthybarchart2015.vg.json";
 var vg4 = "js/Freedombarchart2015.vg.json";
+var vg5 = "js/GDPscatterplot2015.vg.json";
+var vg6 = "js/Healthyscatterplot2015.vg.json";
+var vg7 = "js/Freedomscatterplot2015.vg.json";
 vegaEmbed("#choropleth_map2015",vg1).then(function (result){
 }).catch(console.error);
 vegaEmbed("#GDPbarchart2015",vg2).then(function (result){
@@ -86,6 +89,12 @@ vegaEmbed("#GDPbarchart2015",vg2).then(function (result){
 vegaEmbed("#Healthybarchart2015",vg3).then(function (result){
 }).catch(console.error);
 vegaEmbed("#Freedombarchart2015",vg4).then(function (result){
+}).catch(console.error);
+vegaEmbed("#GDPscatterplot2015",vg5).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Healthyscatterplot2015",vg6).then(function (result){
+}).catch(console.error);
+vegaEmbed("#Freedomscatterplot2015",vg7).then(function (result){
 }).catch(console.error);
 </script>
 
