--- a/DataVisualisation2/2019.html
+++ b/DataVisualisation2/2019.html
@@ -78,6 +78,9 @@
     <section class="content">
         <p>The scatter plot visualizes the correlation between <span class="brown">Happiness Score</span> and <span class="purple">Freedom to make life choices</span>, it clearly shows that higher <span class="purple">Freedom to make life choices</span> brings higher <span class="brown">Happiness Score</span>.</p>
     </section>
+    <section class="content">
+        <p><span class="brown">Happiness Score</span>, <span class="red">GDP</span>, <span class="purple">Freedom to Make Life Choices</span>, and <span class="yellow">Life Expectancy</span> are all key indicators used to assess the overall well-being and quality of life in a <span class="blue">country</span>. The <span class="brown">Happiness Score</span> reflects people's overall satisfaction with life, <span class="red">GDP</span> represents a <span class="blue">country</span>'s level of economic prosperity, while <span class="purple">Freedom to Make Life Choices</span> measures the degree of individual freedom to make personal decisions and pursue happiness. Additionally,  <span class="yellow">Life Expectancy</span> measures the number of years people can expect to live in a healthy state. These indicators together paint a picture of the well-being and quality of life of a country's residents, making them essential for evaluating national policies and societal conditions.</p>
+    </section>
     </main>
     
 <script type="text/javascript">
